fix: Update gap and background color in info containers for improved layout consistency

--- a/src/pages/main/reports/style.scss
+++ b/src/pages/main/reports/style.scss
@@ -122,7 +122,7 @@
 .info-containerPdf {
     display: flex;
     justify-content: flex-end;
-    gap: 12px;
+    gap: 20px;
     width: 100%;
     flex-wrap: wrap;
 }
@@ -142,7 +142,7 @@
     border: 1px solid #e5e7eb;
     border-radius: 10px;
     padding: 8px 16px;
-    background: #ffdeb6;
+    background: #d6d6d6;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
 
     display: flex;
@@ -152,7 +152,7 @@
 
 .title {
     font-size: 15px !important;
-    color: #777;
+    color: #000;
     margin: 0;
     font-weight: bold !important;
 }
